--- a/accessibility-app/package.json
+++ b/accessibility-app/package.json
@@ -10,26 +10,26 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/better-sqlite3": "^7.6.9",
     "@types/leaflet": "^1.9.8",
+    "@types/sqlite3": "^3.1.11",
     "@types/uuid": "^10.0.0",
-    "better-sqlite3": "^11.6.0",
     "leaflet": "^1.9.4",
     "next": "15.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "15.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
